--- a/index.html
+++ b/index.html
@@ -1,36 +1,108 @@
-<!DOCTYPE html>
-<html>
+</html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title></title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--additional CSS-->
+    <link rel="stylesheet" href="index.css">
+
 </head>
+
 <body>
-<h1 >Input From</h1>
-<tablestyle="width:700px">
-<tr><td>
-<form>
-First name:<input type="text"name=firstname">
-Last name:<input type="text"name=lastname">
-<br>Username:<input type="text"name="user">
-Password:<input type="password" name="pwd"><br><br>
-<b>Gender</b>
-<input type="radio"name="sex"value="male">Male
-<input type="radio"name="sex"value="female">Female <br><br>
-<b>Religion</b>
-<input type="checkbox"name="vehicle"value="Bike">Muslim
-<input type="checkbox"name="vehicle"value="Car">Other <br><br>
-<b>IT Experience</b>
-<input type="checkbox"name="vehicle"value="Bike">Hardware Expert
-<input type="checkbox"name="vehicle"value="Bike">Software Expert
-<input type="checkbox"name="vehicle"value="Bike">Graphic Designer
-<br><br><b>Selecte Department</b>
-<select name="Department">
-<option>CSE</option>
-<option>EEE</option>
-<option>Power</option>
-<option>Computer</option>
-<input type="submit"value="submit">
-</form></td></tr></table>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card" style="margin-top: 100px; margin-bottom: 100px;" >
+                    <div class="card-body rounded-pill ">
+                        <form>
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <label for="inputState" style="margin-top: 20px;">First Name</label>
+                                    <input type="text" class="form-control" placeholder="exp.kaif">
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="inputState" style="margin-top: 20px;">Last Name</label>
+                                    <input type="text" class="form-control" placeholder="exp.hossain">
+                                </div>
+                                <br>
+                                <div class="col-md-6">
+                                    <label for="inputState" style="margin-top: 20px;">User Name</label>
+                                    <input type="text" class="form-control" placeholder="exp.kaif21">
+                                </div>
+                                <br>
+                                <div class="col-md-6">
+                                    <label for="inputState" style="margin-top: 20px;">Password</label>
+                                    <input type="password" class="form-control" id="inputPassword3"
+                                        placeholder="Password">
+                                </div>
+
+                                <br>
+                                <div class="form-group col-md-3">
+                                    <label for="inputState" style="margin-top: 20px;">Gender</label>
+                                    <select id="inputState" class="form-control">
+                                        <option selected>Choose...</option>
+                                        <option>Male</option>
+                                        <option>Female</option>
+                                        <option>Other</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="inputState" style="margin-top: 20px;">Religion</label>
+                                    <input type="text" class="form-control" placeholder="exp.Islam">
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="inputState" style="margin-top: 20px;">Select Technology</label>
+                                    <input type="text" class="form-control" placeholder="exp.Computer,Electrical">
+                                </div>
+                                <div class="form-group col-md-3">
+                                    <label for="inputState" style="margin-top: 20px;">IT Skill</label>
+                                    <select id="inputState" class="form-control">
+                                        <option selected>Choose...</option>
+                                        <option>HTML</option>
+                                        <option>CSS</option>
+                                        <option>PHP</option>
+                                        <option>Java</option>
+                                        <option>PYTHON</option>
+                                        <option>RUBY</option>
+                                        <option>Wordpress</option>
+                                        <option>Data Entry</option>
+                                        <option>Other</option>
+                                    </select>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <a class="btn btn-Success submit" href="#" role="button">Submit</a>
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
 </body>
 
 </html>
